--- a/content/post/2021-04-05-simulating-prediction-intervals/index.Rmd
+++ b/content/post/2021-04-05-simulating-prediction-intervals/index.Rmd
@@ -28,7 +28,7 @@ This post was largely inspired by topics discussed in the [Prediction intervals 
 
 Compared to analytic approaches, estimating sources of uncertainty through simulation has the advantage of... 
 
-1. relying on fewer model assumptions (though still generally requires that your model's errors are [iid](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables)) to still produce reasonable measures of uncertainty. 
+1. relying on fewer model assumptions to still produce reasonable measures of uncertainty (though still generally requires that your model's errors are [iid](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables)). 
 1. can be applied to (essentially[^assumptions]) any model type^[The trade-off with simulation techniques is generally you get to dodge hairy or intractable math at the cost of high computation costs.]. 
 
 **Approach:**
@@ -42,26 +42,20 @@ These will then be combined to produce an overall measure of uncertainty for the
 
 [^assumptions]: With the caveat that some model types may require *lots* of simulations for the interval produced to be appropriate as discussed [here](https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) by Max Kuhn. Also, there is usually the assumption that errors are [exchangable](https://en.wikipedia.org/wiki/Exchangeable_random_variables) across observations.
 
-**Caution**
-
-It seems to be common that people who set-out to simulate prediction intervals end-up simulating confidence intervals[^confusions] -- i.e. they account for uncertainty in estimating the model while forgetting to account for the uncertainty of the sample. I wrote more on this in [Prediction Intervals and Confidence Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#prediction-intervals-and-confidence-intervals) from Part 1^[This confusion may be particularly common in the case of simulation because bootstrapping is generally concerned with estimating the distribution of *parameter* estimates rather than individual observations.].
-
-[^confusions]: Example from response on Rstudio Community [thread](https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/9?u=brshallo). Or else they are ambiguous about which they intend to build as in this example from an online textbook on [Inferential Thinking](https://github.com/data-8/textbook/issues/153#issuecomment-798793835). 
-
 # Procedure
 
-**To produce simulated prediction intervals, I apply the following steps:**
+**To produce simulated prediction intervals in [Example], I apply the following steps:**
 
 Given the model training dataset with *n* number of observations...
 
-1. Build *b* number of models using *b* bootstrap resamples on the training dataset (default of *b* is the square root of *n*^[Per guidance on Nielsen's post -- though Kuhn suggests [here]((https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) that more samples should be taken.]).
-2. Build another set of *k* models^[Though functions can also be set such that will just use the bootstrapped models (rather than building a separate set).] using *k*-fold cross-validation^[I think Max suggested using cross-validation here instead of the residuals on the out-of-bag samples in the bootstraps because bootstrap samples tend to overestimate the errors (I believe).] (default of *k* is 10) and extract the residuals, composed of *n* elements -- providing distribution of variability due to the sample^[I ignore any adjustments due to centroid as I'm not sure how to do this appropriately outside of the linear regression context.].
+1. Build *b* number of models using *b* bootstrap resamples on the training dataset (default of *b* is the square root of *n*)^[Per guidance on Nielsen's post -- though Kuhn suggests [here]((https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/4?u=brshallo) that more samples should be taken.].
+2. Build another set of *k* models^[Though functions can also be set such that will just use the bootstrapped models (rather than building a separate set).] using *k*-fold cross-validation^[I think Max suggested using cross-validation here instead of the residuals on the out-of-bag samples in the bootstraps because bootstrap samples tend to overestimate the errors (I believe).] (default of *k* is 10) and extract the residuals, composed of *n* elements -- providing distribution for uncertainty due to the sample^[I ignore any adjustments due to centroid as I'm not sure how to do this appropriately outside of the linear regression context.].
 
-Given an observation or set of observations you would like to produce prediction intervals for...
+Given an observation (or set of observations) you would like to produce prediction intervals for...
 
 3. For each new observation, produce a prediction using all of the *b* models created in step 1.
 4. Take the difference between each model's prediction (from step 3) and the mean of all the model's predictions -- the resulting *b* differences for each observation provides the distribution for the variability due to model estimation at each point.
-5. For each observation, repeatedly sample from "residuals" (step 2) and "model error / differences" (step 4) and add together -- do this *h* times (with replacement) OR create all possible combinations from step 2 and step 5. Rather than *h*, the latter approach will produce a distribution composed of *n* x *b* elements^[{number of observations in model training dataset} x {number of models created}] for each new observation (the default behavior for the functions used in [Example]^[Warning that this will become computationally expensive very quickly as number of observations in training data or number of models created increases.]).
+5. For each observation, repeatedly sample from "residuals" (step 2) and "model error / differences" (step 4) and add together -- do this *h* times (with replacement) OR create all possible combinations from step 2 and step 5. Rather than *h*, the latter approach will produce a distribution composed of *n* x *b* elements^[{number of observations in model training dataset} x {number of models created}] for each new observation (default behavior^[Warning that this will become computationally expensive very quickly as number of observations in training data or number of models created increases.]).
 6. Pull quantiles (from the distribution created in step 5) according to the desired level of coverage of your intervals -- e.g. 0.05 and 0.95 for a 90% prediction interval.
 
 See [gist](https://gist.github.com/brshallo/3db2cd25172899f91b196a90d5980690) for documentation on implementation.
@@ -72,18 +66,18 @@ See [gist](https://gist.github.com/brshallo/3db2cd25172899f91b196a90d5980690) fo
 
 * only use out-of-sample estimates to produce the interval 
 * estimate the *uncertainty of the sample* using the residuals from a separate set of models built with cross-validation^[Rather than the residuals of the bootstrapped samples used to estimate the *uncertainty of the model*. (However the functions I create do allow for using the bootstrapped resamples to calculate the uncertainty in the sample -- see [gist](https://gist.github.com/brshallo/3db2cd25172899f91b196a90d5980690))]
-* use the [tidymodels](https://www.tidymodels.org/) / [tidyverse](https://www.tidyverse.org/) ecosystem within R (whereas Dan's examples are encoded in python). 
 * include in the simulation both a model fit specification *and* pre-processing recipe^[Rather than solely focusing on the model for my example.]
+* use the [tidymodels](https://www.tidymodels.org/) / [tidyverse](https://www.tidyverse.org/) ecosystem within R (whereas Dan's examples are encoded in python). 
 
-Dan's post provides more precise symbolic representations as well as more figures showcasing the advantages of simulation based approaches, e.g.
+Dan's post provides more precise symbolic representations as well as more figures showcasing results and advantages of simulation based approaches, e.g.
 
 ![*Example of more sensible handling of non-normality of errors, from Dan Saattrup's excellent post [Bootstrapping prediction intervals](https://saattrupdan.github.io/2020-03-01-bootstrap-prediction/)*](https://saattrupdan.github.io/img/prediction-bootstrap-linear-lognormal.png)
 
-The [Appendix] provides links to [Other Examples Using Simulation].
+The [Appendix] provides links from the web to [Other Examples Using Simulation].
 
 # Example
 
-The initial set-up -- load packages, load data, set pre-processing recipe, model specification -- is the same as in the [Providing More Than Point Estimates](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#providing-more-than-point-estimates) section of part 1. The code below is being sourced and printed from that post's .Rmd file.
+The initial set-up (load packages, load data, set pre-processing recipe, model specification) is the same as in the [Providing More Than Point Estimates](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#providing-more-than-point-estimates) section of part 1. The code below is being sourced and printed from that post's .Rmd file.
 
 ```{r source-code, include = FALSE, cache = FALSE}
 devtools::source_gist("https://gist.github.com/brshallo/e963b9dca5e4e1ab12ec6348b135362e")
@@ -117,7 +111,7 @@ lm_rec_mod <- lm_wf <- workflows::workflow() %>%
 
 **Steps 1 & 2 from [Procedure]:**
 
-`prep_interval()` is a function I wrote that takes in a workflow (model specification + pre-processing recipe^[Because a workflow contains both a function for fitting models and a pre-processing recipe, this procedure accounts for variability due to pre-processing as a part of the model-fitting procedure.]) along with a training dataset, and outputs a named list containing bootstrapped model fits + prepped recipes (`model_uncertainty`) and the resulting residuals from cross-validation (`sample_uncertainty`). 
+`prep_interval()` takes in a workflow (model specification + pre-processing recipe^[Because a workflow contains both a function for fitting models and a pre-processing recipe, this procedure accounts for variability due to pre-processing as a part of the model-fitting procedure.]) along with a training dataset, and outputs a named list containing bootstrapped model fits + prepped recipes (`model_uncertainty`) and the resulting residuals from cross-validation (`sample_uncertainty`). 
 
 ```{r}
 # load custom functions `prep_interval()` and ``predict_interval()`
@@ -150,7 +144,7 @@ See [gist](https://gist.github.com/brshallo/3db2cd25172899f91b196a90d5980690) fo
 
 # Review
 
-Reviewing our example offer from the [Part 1](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) post, we see similar prediction intervals below to those specified by the analytic method:
+Reviewing our example offer from the [Part 1](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) post, we see a similar prediction interval to that specified by the analytic method:
 
 ```{r}
 lm_sim_intervals %>% 
@@ -180,11 +174,13 @@ lm_sim_intervals %>%
   scale_y_log10(labels = scales::dollar)
 ```
 
-Simulation produced intervals show more differences in relative interval widths compared to those outputted with analytic methods: [Part 1, Review Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals) (where the relative interval widths were nearly constant across predictions).
+Simulation produced intervals show more differences in relative interval widths compared to those outputted with analytic methods (see [Part 1, Review Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#review-prediction-intervals), the relative interval widths were nearly constant across predictions).
 
 ## Interval Width
 
-The relative interval widths for the simulation based approach vary between observations by more than 10x what we saw in the interval widths using [Analytic Methods](http://localhost:4321/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#interval-width)[^differences] (where interval widths had a standard deviation of less than half a percentage point). We also see greater differences in interval width between buckets of predictions (a range of about 6.5 percentage points vs 0.4). 
+The relative prediction interval widths from the simulation based approach vary between observations by more than 10x what we saw in the [Interval Widths](http://localhost:4321/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#interval-width) using analytic methods[^differences] (where interval width had a standard deviation of less than half a percentage point). 
+
+We also see greater differences in interval width between buckets of predictions (a range of about 6.5 percentage points vs 0.4). 
 
 This suggests the simulation based approach allows for greater differentiation in estimated levels of uncertainty by attributes^[E.g. based on the attributes of an observation. Remember that the analytic method only allowed for *slight* variability in prediction intervals across observations. Based on a constrained definition of the distance of an observation from the centroid of the data.].
 
@@ -274,9 +270,9 @@ lm_sim_intervals %>%
   theme_bw()
 ```
 
-The overall pattern appears broadly similar to that seen in the [analytic method](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#coverage). However coverage rates seem to be slightly more consistent across quintiles in the simulation based approach -- an improvement over the analytic method (where coverage levels had appeared to be slightly more dependent upon quintile of predicted `Sale_Price`). 
+The overall pattern appears broadly similar to that seen in the [analytic method](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#coverage). However coverage rates seem to be slightly more consistent across quintiles in the simulation based approach -- an improvement over the analytic method (where coverage levels had appeared to be slightly more dependent upon quintile of predicted `Sale_Price`)^[The reason you want consistent coverage rates is because then you can trust your interval captures your data at the rate you would expect across observations and not just in aggregate. The difference is related to conditional vs marginal coverage.]. 
 
-For example, a chi-squared test in the [previous post](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#coverage) had shown significant variation in coverage rates across quintiles when applied to the analytic method. However the same test applied to the results from the simulation based prediction intervals does not show a significant difference:
+For example, a chi-squared test in the [previous post](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#coverage) had shown significant variation in coverage rates across quintiles when applied to the analytic method. However the same test applied to the results from the simulation based prediction intervals does not show a significant difference^[There are more direct ways available for comparing these. This, after all, isn't a test comparing the two distributions but two separate tests against the NULL hypothesis. Also noted in a footnote in Part 1, it would likely have been better to base the groupings on `Sale_Price` rather than predicted `Sale_Price` so could have had paired groups. Rather than a general chi-squared test, something like [McNemar's test](https://en.wikipedia.org/wiki/McNemar%27s_test) may be more appropriate.].
 
 ```{r}
 lm_sim_intervals %>% 
@@ -286,20 +282,13 @@ lm_sim_intervals %>%
   pander::pander()
 ```
 
-Though there are more direct ways available for comparing these...
+Keep in mind we are looking at just one model specification on one set of data^[Further examples would be needed to make more general statements on the qualities of simulation versus parametric based approaches to building prediction intervals.]. 
 
-We are also looking at just one model specification for one set of data... further examples would be needed to make more general statements on the efficacy of this simulation based approach...
-
-**Adjusting [Procedure]**
-
-If we see that coverage rates depend on predicted value of `Sale_Price` (or on some other attribute) we might:
-
-* try altering the pre-processing recipe
-* adjust [Procedure] to segment^[Or perhaps segmented in a fuzzy way so was done on a continuous scale] the residuals by predicted `Sale_Price` and shuffle the errors within segments (rather than across the entire dataset). This would allow the uncertainty due to the sample to vary according to the predicted `Sale_Price`^[Or any other selected attribute -- though would need to put some more thought into how to do properly, appropriate number of observations, etc., hard or fuzzy segmenting, how many buckets or how to handle continuously...].
+See [Adjusting Procedure] in the [Appendix] for a couple examples of circumstances where you might want to make changes to [Procedure].
 
 # Closing Notes
 
-This post walked through a rough implementation for simulating prediction intervals for arbitrary model types + preprocessing steps in a way that is loosely in the style of tidymodels.
+This post walked through a rough implementation for simulating prediction intervals for arbitrary model types + preprocessing steps in a way that is loosely in the style of tidymodels. It represents a continuation on [Understanding Prediction Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/) and is the second of three posts I am writing on prediction intervals. The **third post** will cover quantile regression.
 
 *Advantages of simulation based techniques for building prediction intervals:*
 
@@ -338,3 +327,24 @@ Limitation with these examples (as encoded):
 
 * re-estimate some component of their prediction intervals based on performance on the data used to train the model.
 * are set-up for linear models
+
+## Confusion With Confidence Intervals
+
+It seems to be common for people to seem to set-out to simulate prediction intervals but end-up simulating confidence intervals[^confusions] -- i.e. they account for uncertainty in estimating the model while forgetting to account for the uncertainty of the sample. I wrote more on this in [Prediction Intervals and Confidence Intervals](https://www.bryanshalloway.com/2021/03/18/intuition-on-uncertainty-of-predictions-introduction-to-prediction-intervals/#prediction-intervals-and-confidence-intervals) from Part 1^[This confusion may be particularly common in the case of simulation because bootstrapping is generally concerned with estimating the distribution of *parameter* estimates rather than individual observations.].
+
+[^confusions]: Example from response on Rstudio Community [thread](https://community.rstudio.com/t/prediction-intervals-with-tidymodels-best-practices/82594/9?u=brshallo). Or else they are ambiguous about which they intend to build as in this example from an online textbook on [Inferential Thinking](https://github.com/data-8/textbook/issues/153#issuecomment-798793835). 
+
+## Adjusting Procedure
+
+Below are just a few examples. ([Procedure] is more just a toy set-up and by no means optimized.)
+
+**Coverage level depends on attribute(s)**
+
+If we see that coverage rates depend on predicted value of `Sale_Price` (or on some other attribute) we might:
+
+* try altering the pre-processing recipe
+* adjust [Procedure] to segment^[Or perhaps segmented in a fuzzy way so rather than having discrete bins is done on a potentially  continuous scale] the residuals by predicted `Sale_Price` and shuffle the errors within segments (rather than across the entire dataset). This would allow the uncertainty due to the sample to vary according to the predicted `Sale_Price`^[Or any other selected attribute -- though would need to put some more thought into how to do properly, appropriate number of observations, etc., hard or fuzzy segmenting, how many buckets or how to handle continuously...].
+
+**Random Splits Not Appropriate**
+
+The procedure I walk through assumes a random split in your data is fine. However in many cases it may make sense to have group or time based sampling schemes (see my [presentation](https://www.youtube.com/watch?v=-wUzdeThODo&list=PL2f6B79nBqL16QFte8fN_GWDtJwZDXt95&index=4) that discusses time-based resampling schemes). If a random sampling scheme is inappropriate, you will likely end-up creating too small of prediction intervals. I had *considered* making *prep_interval()* capable of taking in custom resampling specifications but did not set this up... but could be easily edited.
